[PDI-4874] Fix for data-bar cell alignment in IE

--- a/package-res/platform/pentaho-solutions/system/analyzer/styles/report.css
+++ b/package-res/platform/pentaho-solutions/system/analyzer/styles/report.css
@@ -1142,8 +1142,12 @@ TD.dropZoneLabel {
 
 .pivotTable .cells .databar-wrapper
 {
-    margin: 0px;
     position: relative;
+}
+
+.pivotTable .cells .databar-wrapper DIV
+{
+    margin: 0px;
 }
 
 .rowTruncate {
